fixed info-window flicker bug

--- a/css/map.css
+++ b/css/map.css
@@ -95,6 +95,7 @@
 			color:white;
 			font-family: 'Dosis', sans-serif;
 			text-align: center;
+			pointer-events: none;
 		}
 
 
